added instagram property to user
