# src/_dtos/users/dto/update-users.dto.ts
@@ -59,5 +59,11 @@ export class UpdateUsersDto {
     required: false,
     nullable: true,
   })
+  instagram?: string | null;
+  @ApiProperty({
+    type: 'string',
+    required: false,
+    nullable: true,
+  })
   picture?: string | null;
 }
