# src/_dtos/users/entities/users.entity.ts
@@ -57,6 +57,11 @@ export class UsersEntity {
     type: 'string',
     nullable: true,
   })
+  instagram: string | null;
+  @ApiProperty({
+    type: 'string',
+    nullable: true,
+  })
   picture: string | null;
   @ApiProperty({
     type: 'string',
