# swagger.json
@@ -2555,6 +2555,10 @@
             "type": "string",
             "nullable": true
           },
+          "instagram": {
+            "type": "string",
+            "nullable": true
+          },
           "picture": {
             "type": "string",
             "nullable": true
@@ -2613,6 +2617,7 @@
           "zip",
           "phone",
           "email",
+          "instagram",
           "picture",
           "roles",
           "created_at",
@@ -2770,6 +2775,9 @@
               "news",
               "blog"
             ]
+          },
+          "instagram": {
+            "type": "string"
           }
         },
         "required": [
